Added basic form and dialog

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/family-tree.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="App created to display a family tree." />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
     <title>Family tree</title>
   </head>
 
